--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/biblioEm
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=biblio
 spring.datasource.password=epsi2020
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
